<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="compose"
        android:enabled="true"
        android:icon="@drawable/ic_open_one"
        android:shortcutShortLabel="@string/compose_shortcut_short_label1"
        android:shortcutLongLabel="@string/compose_shortcut_long_label1"
        android:shortcutDisabledMessage="@string/compose_disabled_message1">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.afolayanseyi.androidhomeshortcuts"
            android:targetClass="com.afolayanseyi.androidhomeshortcuts.MainActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="business"
        android:enabled="true"
        android:icon="@drawable/ic_business_center"
        android:shortcutShortLabel="@string/compose_shortcut_short_label2"
        android:shortcutLongLabel="@string/compose_shortcut_long_label2"
        android:shortcutDisabledMessage="@string/compose_disabled_message2">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.afolayanseyi.androidhomeshortcuts"
            android:targetClass="com.afolayanseyi.androidhomeshortcuts.MainActivity2" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="call"
        android:enabled="true"
        android:icon="@drawable/ic_call"
        android:shortcutShortLabel="@string/compose_shortcut_short_label3"
        android:shortcutLongLabel="@string/compose_shortcut_long_label3"
        android:shortcutDisabledMessage="@string/compose_disabled_message3">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.afolayanseyi.androidhomeshortcuts"
            android:targetClass="com.afolayanseyi.androidhomeshortcuts.MainActivity3" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <!-- Specify more shortcuts here. -->
</shortcuts>